--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <span class="featured">FEATURED</span>
             </div>
   
-            <h2 class="senior">Senior Frontend Developer</h2>
+            <h2 class="senior"><a href="#">Senior Frontend Developer</a></h2>
   
             <div class="photosnap-left-up">
               <p class="ago">1d ago</p>
@@ -54,7 +54,7 @@
               <span class="featured">FEATURED</span>
             </div>
   
-            <h2 class="senior">Fullstack Developer</h2>
+            <h2 class="senior"><a href="#">Fullstack Developer</a></h2>
   
             <div class="photosnap-left-up">
               <p class="ago">1d ago</p>
@@ -68,7 +68,7 @@
 
         <ul class="photosnap-right">
           <li class="photosnap-item">Fullstack</li>
-          <li class="photosnap-item">Fullstack</li>
+          <li class="photosnap-item">Midweight</li>
           <li class="photosnap-item">Python</li>
           <li class="photosnap-item last">React</li>
         </ul>
@@ -84,7 +84,7 @@
               <span class="news">NEW!</span>
             </div>
   
-            <h2 class="senior">Junior Frontend Developer</h2>
+            <h2 class="senior"><a href="#">Junior Frontend Developer</a></h2>
   
             <div class="photosnap-left-up">
               <p class="ago">2d ago</p>
@@ -114,7 +114,7 @@
               <p class="photosnap-heading">MyHome</p>
             </div>
   
-            <h2 class="senior">Junior Frontend Developer</h2>
+            <h2 class="senior"><a href="#">Junior Frontend Developer</a></h2>
   
             <div class="photosnap-left-up">
               <p class="ago">5d ago</p>
@@ -143,7 +143,7 @@
               <p class="photosnap-heading">Loop Studios</p>
             </div>
   
-            <h2 class="senior">Software Engineer</h2>
+            <h2 class="senior"><a href="#">Software Engineer</a></h2>
   
             <div class="photosnap-left-up">
               <p class="ago">1w ago</p>
@@ -173,7 +173,7 @@
               <p class="photosnap-heading">FaceIt</p>
             </div>
   
-            <h2 class="senior">Junior Backend Developer</h2>
+            <h2 class="senior"><a href="#">Junior Backend Developer</a></h2>
   
             <div class="photosnap-left-up">
               <p class="ago">2w ago</p>
@@ -202,7 +202,7 @@
               <p class="photosnap-heading">Shortly</p>
             </div>
   
-            <h2 class="senior">Junior Developer</h2>
+            <h2 class="senior"><a href="#">Junior Developer</a></h2>
   
             <div class="photosnap-left-up">
               <p class="ago">2w ago</p>
@@ -232,7 +232,7 @@
               <p class="photosnap-heading">Shortly</p>
             </div>
   
-            <h2 class="senior">Junior Frontend Developer</h2>
+            <h2 class="senior"><a href="#">Junior Frontend Developer</a></h2>
   
             <div class="photosnap-left-up">
               <p class="ago">2w ago</p>
@@ -262,7 +262,7 @@
               <p class="photosnap-heading">Eyecam Co.</p>
             </div>
   
-            <h2 class="senior">Full Stack Engineer</h2>
+            <h2 class="senior"><a href="#">Full Stack Engineer</a></h2>
   
             <div class="photosnap-left-up">
               <p class="ago">3w ago</p>
@@ -292,7 +292,7 @@
               <p class="photosnap-heading">The Air Filter Company</p>
             </div>
   
-            <h2 class="senior">Front-end Dev</h2>
+            <h2 class="senior"><a href="#">Front-end Dev</a></h2>
   
             <div class="photosnap-left-up">
               <p class="ago">1mo ago</p>
